--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@aragon/ui": "^0.40.2",
     "@material-ui/core": "^4.5.2",
+    "@material-ui/icons": "^4.5.1",
     "polished": "^3.4.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
