--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "@aragon/ui": "^0.40.2",
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
+    "@types/luxon": "^1.15.2",
+    "@types/web3": "^1.2.2",
+    "luxon": "^1.20.0",
     "polished": "^3.4.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.6.4",
+    "web3": "^1.2.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.20",
