--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@aragon/ui": "^0.40.2",
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
+    "@types/lodash": "^4.14.144",
     "@types/luxon": "^1.15.2",
     "@types/web3": "^1.2.2",
+    "lodash": "^4.17.15",
     "luxon": "^1.20.0",
     "polished": "^3.4.1",
     "react": "^16.11.0",
